# space_hell

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
assets/: config.ini
src/: game.cpp  game.h  game_state_playing.cpp  main.cpp  util.h
